<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.finalyearproject.dan.ocraccountingapp.SignInActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/signIn_editText_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:inputType="textEmailAddress"
            android:hint="@string/sign_in_email"
            />
        <EditText
            android:id="@+id/signIn_editText_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/sign_in_text_margin"
            android:layout_marginRight="@dimen/sign_in_text_margin"
            android:inputType="textPassword"
            android:hint="@string/sign_in_password"
            />

        <Button
            android:text="SIGN IN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signIn_imageButton_login" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/signIn_textView_CreateNewAccount"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in_new_account"
                android:textAppearance="?android:textAppearanceSmall"
                android:gravity="left"
                android:layout_marginLeft="@dimen/sign_in_text_margin"
                />

            <TextView
                android:id="@+id/signIn_textView_ForgotPassword"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/sign_in_forgot_password"
                android:textAppearance="?android:textAppearanceSmall"
                android:gravity="right"
                android:layout_marginRight="@dimen/sign_in_text_margin"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal">

            <View
                android:layout_width="100dp"
                android:layout_height="@dimen/sign_in_separator_height"
                android:background="@color/sign_in_separator_color"
                android:padding="5dp"
                android:layout_gravity="left|center_vertical"
                android:gravity="center_vertical"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/sign_in_or"
                android:padding="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                />

            <View
                android:layout_width="100dp"
                android:layout_height="@dimen/sign_in_separator_height"
                android:background="@color/sign_in_separator_color"
                android:padding="5dp"
                android:layout_gravity="right|center_vertical"
                android:gravity="center_vertical"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="FACEBOOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fb_login_button"
        android:layout_marginBottom="25dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
